Import of TOKUHIROM/DBIx-Kohada-0.02 from CPAN.
gitpan-cpan-distribution: DBIx-Kohada
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TOKUHIROM/DBIx-Kohada-0.02.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 Revision history for Perl extension DBIx::Kohada
 
+0.02
+
+    - fixed typo
+    - fixed issue in pod synopsis section
+    - fixed deps(reported by andk++)
+
 0.01    Fri Nov 26 16:26:53 2010
         - original version
